--- a/src/components/picture-gallery/picture-gallery.css
+++ b/src/components/picture-gallery/picture-gallery.css
@@ -1,3 +1,10 @@
+.carousel-sheet {
+    margin: auto;
+    width: 1000px;
+    display: flex;
+    justify-content: space-around;
+}
+
 .hovereffect {
     width: 100%;
     height: 100%;
