#4 - bem code review + corrected svg mock

--- a/src/components/coloring-picture/coloring-picture.scss
+++ b/src/components/coloring-picture/coloring-picture.scss
@@ -1,4 +1,4 @@
-@import "../../css/main.scss";
+@import "../../scss/style.scss";
 
 .svg-picture {
     @include svg-scale(map-get($coloring-picture-widths, desktop));
