--- a/src/components/picture-gallery/picture-gallery.scss
+++ b/src/components/picture-gallery/picture-gallery.scss
@@ -1,4 +1,4 @@
-@import "../../css/main.scss";
+@import "../../scss/style.scss";
 
 @mixin resize($display, $column-count) {
     $width: map-get($picture-widths, $display) * 1px;
